# duet

./: .env.example  .gitignore  README.md
.claude/: launch.json
.github/workflows/: ci.yml  infra.yml
agent/: README.md  pyproject.toml
agent/duet_agent/: __init__.py  asr_util.py  env.py  injector.py  local_loop.py  persona.py  reasoning.py  sdr_loop.py  telemetry.py  turntaking.py
agent/tests/: test_env.py  test_injector.py  test_persona.py  test_reasoning.py  test_turntaking.py
docs/: BLIND_EVAL.md  DECISIONS.md  LEARNING.md
docs/blog/: voice-ai-the-80-20.md
eval/: README.md
eval/bench/: RESULTS.md  run_bench.py  scenarios.json
eval/reasoning/: run_eval.py  scenarios.json
infra/: .env.example  README.md  observability-compose.yml  prometheus.yml
infra/grafana/dashboards/: duet.json
infra/grafana/provisioning/dashboards/: provider.yml
infra/grafana/provisioning/datasources/: duet.yml
scripts/: local-demo.sh
web-demo/: README.md  server.py
web-demo/static/: index.html  worklets.js
