[project]
name = "duet-agent"
version = "0.1.0"
description = "Duet's duplex core: a full-duplex conversational loop around Moshi (Apple-Silicon MLX backend)"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "moshi-mlx>=0.3,<0.4",
    "numpy",
    "sounddevice",
    "huggingface-hub",
]

[project.scripts]
duet-local = "duet_agent.local_loop:main"
duet-sdr = "duet_agent.sdr_loop:main"

[project.optional-dependencies]
live = ["faster-whisper>=1.0"]  # ASR for the async brain in --live mode only

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8"]

[tool.ruff]
line-length = 130
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["duet_agent"]
